--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/chat.js": "/js/chat.js",
-    "/css/chat.css": "/css/chat.css"
+    "/css/chat.css": "/css/chat.css",
+    "/css/app.css": "/css/app.css"
 }
