--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.6"
+    },
+    "dependencies": {
+        "microsoft-cognitiveservices-speech-sdk": "^1.2.1",
+        "moment": "^2.24.0"
     }
 }
